--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "flexboxgrid-sass": "^8.0.5",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
-    "node-sass": "^4.11.0",
+    "mobx-react-lite": "^1.4.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
