--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "telafilme",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-query-devtools": "^5.40.1",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "flexboxgrid-sass": "^8.0.5",
+    "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
